# platform

./: .dockerignore  .gitignore  .mcp.json  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  IMPROVEMENTS.md  LICENSE  LICENSE-PLATFORM  PRD.md  README.md  SECURITY.md  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  glama.json  lefthook.yml  package-lock.json  package.json  playwright.config.ts  playwright.demo-healthcare.config.ts  tsconfig.base.json  ui_specifications.md
.githooks/: pre-commit-secret-scan.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: globals.css  layout.tsx
deployment/: env.example
hooks/: LICENSE  README.md  settings.json  sidclaw_posttool.py  sidclaw_pretool.py  sidclaw_stop.py
integrations/: .gitignore
integrations/langchain-python/: README.md  pyproject.toml
integrations/langchain-python/examples/: basic_governance.py  multi_tool_agent.py
integrations/langchain-python/src/langchain_sidclaw/: __init__.py  _callbacks.py
integrations/langchain-python/tests/: test_callbacks.py  test_tools.py
research/: 2026-03-20-market-viability-assessment.md  2026-03-20-product-development-plan.md  2026-03-21-brand-naming-research.md  2026-03-21-deployment-report.md  2026-03-21-phase1-verification-report.md  2026-03-21-phase2-verification-report.md  2026-03-21-phase3-verification-report.md  2026-03-21-phase4-verification-report.md  2026-03-21-phase5-verification-report.md  2026-03-22-redeploy-verification.md
scripts/: demo.ts  install-hooks.mjs
v0-prototype/: TICKETS.md
(+736 files in other folders)
