[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langchain-sidclaw"
version = "0.1.0"
description = "SidClaw governance integration for LangChain — policy evaluation, human approval, and audit trails for AI agent tools"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [{ name = "SidClaw", email = "hello@sidclaw.com" }]
keywords = [
    "langchain", "sidclaw", "governance", "approval", "audit",
    "ai-agent", "security", "compliance", "finra", "hipaa",
    "policy", "human-in-the-loop",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "sidclaw>=0.1.0",
    "langchain-core>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://sidclaw.com"
Documentation = "https://docs.sidclaw.com/docs/integrations/langchain"
Repository = "https://github.com/sidclawhq/platform"
Issues = "https://github.com/sidclawhq/platform/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_sidclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
